# warthog-core

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: main.yaml  pull_requests.yaml
.sqlx/: query-9e0ddec18bbdf7d3bbf4b7976096327f12ef998e0d56f359b31e88c5ae3e4dfb.json  query-ea5e9bea36acd3a1ee09e4b749534cca7287429e1eafe9dfd7b70b372a6adaf7.json
migrations/: 20240515201030_projects.sql
proto/: ipc_schema.proto  vcs.proto
src/: main.rs
src/communication/: command.rs
src/daemon/: daemon.rs  daemon_loop.rs  mod.rs
src/db/: database.rs
src/ipc/: ipc_command.rs  ipc_request_processor.rs  ipc_service.rs  mod.rs  request_processor.rs
src/processor/: command.rs  commands.rs  mod.rs  processor.rs
src/protos/: ipc_schema.proto  local_schema.proto  schema.proto
src/services/: mod.rs  version_control.rs
src/tus/: mod.rs
src/utils/: config.rs
src/vcs/: version_control.rs
src/watcher/: event_processor.rs  folder_watcher.rs  mod.rs  watcher_command.rs  watcher_processor.rs
