[package]
name = "warthog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
daemonize-me = "2.0.1"
ipc-channel = "0.18.0"
notify = { version = "6.1.1", features = ["serde"] }
protobuf = "3.4.0"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
