[package]
name = "warthog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
ipc-channel = "0.18.0"
notify = { version = "6.1.1", features = ["serde"] }
protobuf = "3.4.0"
tokio = { version = "1.37.0", features = ["full"] }
log = "0.4.21"
env_logger = "0.11.3"
walkdir = "2.5.0"
sha2 = "0.10.8"
thiserror = "1.0.58"
dotenvy = "0.15.7"
sd-notify = "0.4.1"
